About page spacing css fixes.

--- a/less/about.less
+++ b/less/about.less
@@ -13,13 +13,22 @@
   margin-bottom: -15px;
 }
 
+.us-imperial {
+  margin-top: 50px;
+}
+
 .unit-list {
   margin-right: 25px;
+  margin-bottom: -20px;
 }
 
 .unit-symbols {
   margin-top: -5px;
   font-size: 12px;
+}
+
+.faq {
+  margin-top: 45px;
 }
 
 .faq-question {
